fixing api-docs
